--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -16,11 +16,14 @@
 	width: 45px;
 	height: 45px;
 	font-weight: 700;
-	transform-origin: center center;
-	transition: rotate 0.3s ease;
 	user-select: none;
 
-	&.rotate {
+	span {
+		transform-origin: center center;
+		transition: rotate 0.3s ease;
+	}
+
+	&.rotate span {
 		rotate: 45deg;
 	}
 }
@@ -59,6 +62,11 @@
 	border-right-width: 1px;
 	border-top-left-radius: 5px;
 	border-bottom-left-radius: 5px;
+	font-size: 18px;
+
+	&::placeholder {
+		padding-left: 3px;
+	}
 }
 
 .addHabitButton {
@@ -66,6 +74,8 @@
 	padding: 5px 10px;
 	border: 2px solid #000;
 	border-left-width: 1px;
+	font-size: 18px;
+	font-weight: 700;
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
 }
