--- a/src/components/habits/Habits.module.scss
+++ b/src/components/habits/Habits.module.scss
@@ -10,11 +10,14 @@
 	margin-bottom: 10px;
 
 	img {
-		border-radius: 50%;
 		border: 2px solid #e2e4dd;
+		border-radius: 10px;
+		padding: 10px;
 	}
 
 	.habitName {
+		font-weight: 700;
+		font-size: 27px;
 		color: #000;
 	}
 }
@@ -60,14 +63,14 @@
 @keyframes zoomIn {
 	from {
 		opacity: 0;
-		transform: scale (0.5);
+		transform: scale(0.5);
 	}
 	65% {
 		opacity: 0.8;
-		transform: scale (1.15);
+		transform: scale(1.15);
 	}
 	to {
 		opacity: 1;
-		transform: scale (1);
+		transform: scale(1);
 	}
 }
