--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -15,6 +15,7 @@
 	font-size: 45px;
 	width: 45px;
 	height: 45px;
+	background-color: #fff;
 	font-weight: 700;
 	user-select: none;
 
@@ -30,8 +31,8 @@
 
 .form {
 	position: absolute;
-	top: 50px;
-	right: 50px;
+	top: 72px;
+	right: 30px;
 	display: none;
 	animation: zoomIn 0.6s;
 
@@ -43,37 +44,41 @@
 @keyframes zoomIn {
 	from {
 		opacity: 0;
-		transform: scale (0.5);
+		transform: scale(0.5);
 	}
 	65% {
 		opacity: 0.8;
-		transform: scale (1.15);
+		transform: scale(1.15);
 	}
 	to {
 		opacity: 1;
-		transform: scale (1);
+		transform: scale(1);
 	}
 }
 
 .inputHabitName {
 	outline: none;
-	padding: 5px 10px;
-	border: 2px solid #000;
-	border-right-width: 1px;
-	border-top-left-radius: 5px;
-	border-bottom-left-radius: 5px;
+	padding: 20px 25px;
+	padding-right: 75px;
+	border-radius: 5px;
 	font-size: 18px;
-
+	background-color: rgba(255, 255, 255, 0.95);
+	
 	&::placeholder {
 		padding-left: 3px;
 	}
 }
 
 .addHabitButton {
+	position: absolute;
+	right: 10px;
+	top: 50%;
+	transform: translateY(-50%);
 	outline: none;
 	padding: 5px 10px;
-	border: 2px solid #000;
-	border-left-width: 1px;
+	border-radius: 5px;
+	background-color: #000;
+	color: #fff;
 	font-size: 18px;
 	font-weight: 700;
 	border-top-right-radius: 5px;
