--- a/src/components/progress-bar/ProgressBar.module.scss
+++ b/src/components/progress-bar/ProgressBar.module.scss
@@ -16,7 +16,7 @@
 	text-align: center;
 	border-radius: 5px;
 	overflow: hidden;
-
+	padding-left: 5px;
 	div {
 		background: #f5f6f7;
 		transition: width 0.5s ease;
