--- a/src/components/progress-bar/ProgressBar.module.scss
+++ b/src/components/progress-bar/ProgressBar.module.scss
@@ -17,6 +17,8 @@
 	border-radius: 5px;
 	overflow: hidden;
 	padding-left: 5px;
+	color: #000;
+	
 	div {
 		background: #f5f6f7;
 		transition: width 0.5s ease;
