added current date & fixed percent when adding new habit

--- a/src/components/habits/Habits.module.scss
+++ b/src/components/habits/Habits.module.scss
@@ -28,6 +28,7 @@
 	justify-content: space-between;
 
 	button {
+		user-select: none;
 		border-radius: 50%;
 		border: 2px solid #000;
 		opacity: 20%;
