--- a/src/components/progress-bar/ProgressBar.module.scss
+++ b/src/components/progress-bar/ProgressBar.module.scss
@@ -8,7 +8,8 @@
 .progressHeader {
 	color: #fff;
 	margin-bottom: 10px;
-	text-align: center;
+	display: flex;
+	justify-content: space-between;
 }
 
 .progressBar {
@@ -16,9 +17,8 @@
 	text-align: center;
 	border-radius: 5px;
 	overflow: hidden;
-	padding-left: 5px;
-	color: #000;
-	
+	text-indent: 5px;
+
 	div {
 		background: #f5f6f7;
 		transition: width 0.5s ease;
