added local storage saving & toggle only today's day

--- a/src/components/habits/Habits.module.scss
+++ b/src/components/habits/Habits.module.scss
@@ -1,6 +1,7 @@
 .habit {
 	margin-bottom: 30px;
 	animation: zoomIn 0.6s;
+	background-color: #fff;
 }
 
 .habitHeader {
@@ -17,7 +18,7 @@
 
 	.habitName {
 		font-weight: 700;
-		font-size: 27px;
+		font-size: 24px;
 		color: #000;
 	}
 }
