--- a/src/components/habits/Habits.module.scss
+++ b/src/components/habits/Habits.module.scss
@@ -10,16 +10,23 @@
 	gap: 10px;
 	margin-bottom: 10px;
 
-	img {
+	img:not(.deleteHabit) {
 		border: 2px solid #e2e4dd;
-		border-radius: 10px;
+		border-radius: 5px;
 		padding: 10px;
+	}
+
+	.deleteHabit {
+		margin-left: auto;
+		animation: bellshake 0.5s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 	}
 
 	.habitName {
 		font-weight: 700;
 		font-size: 24px;
 		color: #000;
+		max-width: 15ch;
+		word-wrap: break-word;
 	}
 }
 
@@ -32,7 +39,7 @@
 		user-select: none;
 		border-radius: 50%;
 		border: 2px solid #000;
-		opacity: 20%;
+		opacity: 40%;
 		height: 40px;
 		width: 40px;
 		display: flex;
@@ -74,5 +81,35 @@
 	to {
 		opacity: 1;
 		transform: scale(1);
+	}
+}
+
+@keyframes bellshake {
+	0% {
+		transform: rotate(0);
+	}
+	15% {
+		transform: rotate(7deg);
+	}
+	30% {
+		transform: rotate(-7deg);
+	}
+	45% {
+		transform: rotate(2deg);
+	}
+	60% {
+		transform: rotate(-2deg);
+	}
+	75% {
+		transform: rotate(4deg);
+	}
+	85% {
+		transform: rotate(-4deg);
+	}
+	92% {
+		transform: rotate(1deg);
+	}
+	100% {
+		transform: rotate(0);
 	}
 }
