added maskable icon

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -19,6 +19,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			background-color: #fff;
 			
 			img {
 				transition: rotate 0.3s ease;
