--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -20,13 +20,13 @@
 			align-items: center;
 			justify-content: center;
 			background-color: #fff;
-			
+
 			img {
-				transition: rotate 0.3s ease;
+				transition: transform 0.3s ease;
 			}
 
 			&.rotate img {
-				rotate: -90deg;
+				transform: rotate(-90deg);
 			}
 		}
 
@@ -37,6 +37,7 @@
 			outline: none;
 			border: 0;
 			font-size: 45px;
+			line-height: 30px;
 			width: 45px;
 			height: 45px;
 			background-color: #fff;
@@ -44,11 +45,11 @@
 			user-select: none;
 
 			span {
-				transition: rotate 0.3s ease;
+				transition: transform 0.3s ease;
 			}
 
 			&.rotate span {
-				rotate: 45deg;
+				transform: rotate(45deg);
 			}
 		}
 	}
@@ -58,9 +59,9 @@
 	position: absolute;
 	top: 72px;
 	right: 50%;
-	translate: 50%;
 	display: none;
-	animation: zoomIn 0.6s;
+	transform-origin: right;
+	animation: zoomIn 0.6s forwards;
 
 	&.open {
 		display: block;
@@ -70,15 +71,15 @@
 @keyframes zoomIn {
 	from {
 		opacity: 0;
-		transform: scale(0.5);
+		transform: scale(0.5) translateX(50%);
 	}
 	65% {
 		opacity: 0.8;
-		transform: scale(1.15);
+		transform: scale(1.15) translateX(50%);
 	}
 	to {
 		opacity: 1;
-		transform: scale(1);
+		transform: scale(1) translateX(50%);
 	}
 }
 
@@ -88,7 +89,7 @@
 	padding-right: 75px;
 	border-radius: 5px;
 	font-size: 18px;
-	background-color: rgba(255, 255, 255, 0.95);
+	background-color: rgba(255, 255, 255, 0.98);
 
 	&::placeholder {
 		padding-left: 3px;
