--- a/src/components/habits/Habits.module.scss
+++ b/src/components/habits/Habits.module.scss
@@ -11,14 +11,13 @@
 	margin-bottom: 10px;
 
 	img:not(.deleteHabit) {
-		border: 2px solid #e2e4dd;
 		border-radius: 5px;
-		padding: 10px;
+		padding: 2px;
 	}
 
 	.deleteHabit {
 		margin-left: auto;
-		animation: bellshake 0.5s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+		animation: bellshake 0.5s cubic-bezier(0.36, 0.07, 0.19, 0.97) both 0.2s;
 	}
 
 	.habitName {
