--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -5,6 +5,24 @@
 	margin-bottom: 10px;
 	color: #000;
 
+	.headerLogo {
+		display: flex;
+		align-items: center;
+		column-gap: 10px;
+
+		h1 {
+			font-size: 30px;
+
+			span {
+				color: #fff;
+				background-color: #000;
+				border-radius: 10px;
+				padding: 0 5px;
+				margin-left: 2px;
+			}
+		}
+	}
+
 	.headerButtons {
 		display: flex;
 		align-items: center;
